fix:dropdown-folders & fix:scrollbars

--- a/src/assets/styles/components/table.scss
+++ b/src/assets/styles/components/table.scss
@@ -3,3 +3,31 @@
   border-right: 1px solid #eeeeee;
   margin: 10px;
 }*/
+
+.table-div {
+  overflow-y: scroll;
+  max-height: 35vh;
+}
+
+.folders-div{
+  display: flex;
+  flex-direction: row;
+}
+
+.position-sticky-left{
+  position: sticky ;
+  left: 0px;
+}
+.content-scroll{
+  overflow-x: scroll;
+}
+
+.invisible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+#scroll-visible-section{
+  overflow-x: scroll;
+  width: 100%;
+  height: 5px;
+}
